--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 .repository {
@@ -34,6 +35,24 @@ main {
     transform: translateY(-5px);
 }
 
+
+.repository p {
+    margin: 0; /* Reset default margin for paragraphs */
+}
+
+.repository p:last-child {
+    margin-bottom: 10px; /* Add some spacing between tags and the next repository */
+}
+
+.repository p span {
+    display: inline-block;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: #e0e0e0;
+    border-radius: 3px;
+}
+
 a {
     color: #0366d6;
     text-decoration: none;
@@ -43,4 +62,18 @@ a {
     margin-bottom: 20px;
     padding: 10px;
     font-size: 16px;
+}
+
+#userInfo {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: space-between;
+}
+
+#userImage img{
+    border: 2px solid #000;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
 }
