--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ main {
 
 #repositories {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 20px;
     margin-bottom: 20px;
 }
@@ -76,4 +76,12 @@ a {
     border-radius: 50%;
     width: 200px;
     height: 200px;
+}
+/* Make flex-dir col-rev of userInfo if screen size small */
+@media screen and (max-width: 600px) {
+    #userInfo {
+        margin-top: 10px;
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
 }
